--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,7 @@
   ],
   "license": "LGPL3",
   "dependencies": {
-    "bloomrpc-mock": "0.3.1",
-    "grpc": "1.24.2"
+    "@grpc/grpc-js": "^1.2.11",
+    "wartek-bloomrpc-mock": "0.3.3"
   }
 }
