--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "package-all": "yarn build && electron-builder build -mwl",
     "package-linux": "yarn build && electron-builder build --linux",
     "package-win": "yarn build && electron-builder build --win --x64",
-    "postinstall": "node internals/scripts/CheckNativeDep.js && electron-builder install-app-deps package.json",
+    "postinstall": "node internals/scripts/CheckNativeDep.js && electron-builder install-app-deps",
     "prestart": "yarn build",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-server-dev": "cross-env NODE_ENV=development node --experimental-worker --trace-warnings ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
@@ -164,7 +164,7 @@
     "detect-port": "^1.3.0",
     "devtron": "^1.4.0",
     "electron": "6.1.7",
-    "electron-builder": "^20.38.5",
+    "electron-builder": "22.10.5",
     "electron-debug": "^2.1.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.10.0",
